# cinsights

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0929390eaedb_add_analysis_model_to_digest.py  0d2b1bd6be0a_add_cluster_label_to_insight.py  12a7671a4e5b_add_user_id_and_index_project_name.py  2ce1733cfb3d_drop_behavioral_evidence.py  2d8de3881b72_add_metadata_json_to_coding_session.py  32aafc8aa95c_add_session_daily_trend_and_baseline_.py  32f1f17005de_add_llm_call_log.py  33a79a36ff06_add_remaining_tier_0_metric_columns.py  344820bf77ce_add_estimated_analysis_tokens.py  3503b14ddfef_add_stop_hook_suggestions_section_type.py  43eb11d868b7_add_session_alert.py  44eeb44658a6_remove_tier_2_metrics_from_tier_0_tables.py  4ac3a520c1e0_add_harness_attribution_columns.py  4eb7f970a23a_add_interrupt_count.py  99e6e117a8ab_add_quality_metrics_and_indexed_status.py  a2e3bdd34440_add_missing_baseline_metric_fields.py  a9f423e49825_add_context_growth_json_to_coding_.py  b4dddbe208e2_add_behavioral_evidence.py  c028244000ef_drop_session_alert.py  de6e4b7ef87f_add_span_count_and_last_span_time_for_.py  de7d319b36e8_add_digest_tables_and_analysis_token_.py  e975ab530e44_iter1_add_tenant_id_identity_columns_.py  f536be249880_initial_schema.py  fad81535b677_initial_tables.py  fd9afcf347ac_add_scope_stats_table.py
docs/: README.md  concepts.md  configuration.md  faq.md  getting-started.md  how-it-works.md  self-hosting.md
docs/sources/: entireio.md  local.md  phoenix.md
src/cinsights/: alerts.py  capabilities.py  cli.py  config.py  costs.py  main.py  metrics.py  pipeline.py  runtime.py  settings.py  stats.py  trends.py
src/cinsights/alembic/: env.py
tests/: conftest.py  smoke_test_server.py  test_alerts.py  test_analysis.py  test_api.py  test_api_endpoints.py  test_capabilities.py  test_cli.py  test_costs.py  test_jsonl_parsing.py  test_local_source.py  test_metrics.py  test_migrations.py  test_models.py  test_phoenix.py  test_scoring.py  test_stats.py
ui/: eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
ui/src/: app.html
ui/src/lib/: api.ts  (+3 more)
(+81 files in other folders)
